--- a/index.html
+++ b/index.html
@@ -304,8 +304,7 @@
 
         .week-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 1.5rem;
+            grid-template-columnsissues: 1.5rem;
         }
 
         .week-card {
@@ -381,7 +380,7 @@
     <div class="container">
         <div class="header">
             <h1>🚀 Optimized DevOps Learning Schedule</h1>
-            <p>Strategic learning path with 4 hours daily practice - Building foundation to advanced skills</p>
+            <p>Strategic learning path with 8 hours daily practice - Building foundation to advanced skills</p>
         </div>
 
         <div class="learning-path">
@@ -427,11 +426,11 @@
                     <div class="stat-label">Core Technologies</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number">40</div>
+                    <div class="stat-number">80</div>
                     <div class="stat-label">Minutes Per Topic</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number">4h 40m</div>
+                    <div class="stat-number">8h</div>
                     <div class="stat-label">Total Daily Learning</div>
                 </div>
                 <div class="stat-card">
@@ -443,26 +442,26 @@
 
         <div class="schedule-grid">
             <div class="schedule-card">
-                <h3>🌅 Morning Foundation (6:00 - 8:00 AM)</h3>
-                <div class="time-slot">
-                    <span class="time">6:00 - 6:30 AM</span>
+                <h3>🌅 Morning Foundation (5:30 - 8:00 AM)</h3>
+                <div class="time-slot snapshot">
+                    <span class="time">5:30 - 6:00 AM</span>
                     <span class="activity">Wake up, freshen up</span>
                     <span class="duration">30 min</span>
                 </div>
                 <div class="time-slot learning">
-                    <span class="time">6:30 - 7:10 AM</span>
+                    <span class="time">6:00 - 7:20 AM</span>
                     <span class="activity learning">🐧 Linux Practice</span>
-                    <span class="duration">40 min</span>
+                    <span class="duration">80 min</span>
                 </div>
                 <div class="time-slot">
-                    <span class="time">7:10 - 7:30 AM</span>
+                    <span class="time">7:20 - 7:40 AM</span>
                     <span class="activity">Breakfast</span>
                     <span class="duration">20 min</span>
                 </div>
                 <div class="time-slot">
-                    <span class="time">7:30 - 8:00 AM</span>
+                    <span class="time">7:40 - 8:00 AM</span>
                     <span class="activity">Get ready for office</span>
-                    <span class="duration">30 min</span>
+                    <span class="duration">20 min</span>
                 </div>
             </div>
 
@@ -473,50 +472,40 @@
                     <span class="activity">Travel to office</span>
                     <span class="duration">1 hour</span>
                 </div>
-                <div class="time-slot">
-                    <span class="time">9:00 - 11:00 AM</span>
-                    <span class="activity">Work</span>
-                    <span class="duration">2 hours</span>
-                </div>
                 <div class="time-slot learning">
-                    <span class="time">11:00 - 11:40 AM</span>
+                    <span class="time">9:00 - 10:20 AM</span>
                     <span class="activity learning">📜 Bash Scripting</span>
-                    <span class="duration">40 min</span>
+                    <span class="duration">80 min</span>
                 </div>
                 <div class="time-slot">
-                    <span class="time">11:40 AM - 12:00 PM</span>
+                    <span class="time">10:20 - 10:40 AM</span>
                     <span class="activity">Break/Transition</span>
                     <span class="duration">20 min</span>
                 </div>
                 <div class="time-slot">
-                    <span class="time">12:00 - 1:00 PM</span>
+                    <span class="time">10:40 - 12:00 PM</span>
                     <span class="activity">Work</span>
-                    <span class="duration">1 hour</span>
+                    <span class="duration">80 min</span>
+                </div>
+                <div class="time-slot learning">
+                    <span class="time">12:00 - 1:20 PM</span>
+                    <span class="activity learning">🐍 Python Practice</span>
+                    <span class="duration">80 min</span>
                 </div>
                 <div class="time-slot">
-                    <span class="time">1:00 - 2:00 PM</span>
+                    <span class="time">1:20 - 2:20 PM</span>
                     <span class="activity">Lunch Break</span>
                     <span class="duration">1 hour</span>
                 </div>
-                <div class="time-slot learning">
-                    <span class="time">2:00 - 2:40 PM</span>
-                    <span class="activity learning">🐍 Python Practice</span>
-                    <span class="duration">40 min</span>
-                </div>
                 <div class="time-slot">
-                    <span class="time">2:40 - 3:00 PM</span>
-                    <span class="activity">Break/Transition</span>
-                    <span class="duration">20 min</span>
-                </div>
-                <div class="time-slot">
-                    <span class="time">3:00 - 7:00 PM</span>
+                    <span class="time">2:20 - 7:00 PM</span>
                     <span class="activity">Work</span>
-                    <span class="duration">4 hours</span>
+                    <span class="duration">4h 40min</span>
                 </div>
             </div>
 
             <div class="schedule-card">
-                <h3>🌙 Evening Advanced Topics (7:00 PM - 11:00 PM)</h3>
+                <h3>🌙 Evening Advanced Topics (7:00 PM - 12:30 AM)</h3>
                 <div class="time-slot">
                     <span class="time">7:00 - 8:00 PM</span>
                     <span class="activity">Travel home</span>
@@ -528,29 +517,29 @@
                     <span class="duration">30 min</span>
                 </div>
                 <div class="time-slot learning">
-                    <span class="time">8:30 - 9:10 PM</span>
+                    <span class="time">8:30 - 9:50 PM</span>
                     <span class="activity learning">🌐 Networking</span>
-                    <span class="duration">40 min</span>
+                    <span class="duration">80 min</span>
                 </div>
                 <div class="time-slot learning">
-                    <span class="time">9:10 - 9:50 PM</span>
+                    <span class="time">9:50 - 11:10 PM</span>
                     <span class="activity learning">🐳 Docker</span>
-                    <span class="duration">40 min</span>
+                    <span class="duration">80 min</span>
                 </div>
                 <div class="time-slot learning">
-                    <span class="time">9:50 - 10:30 PM</span>
+                    <span class="time">11:10 - 12:30 AM</span>
                     <span class="activity learning">☸️ Kubernetes</span>
-                    <span class="duration">40 min</span>
+                    <span class="duration">80 min</span>
                 </div>
                 <div class="time-slot learning">
-                    <span class="time">10:30 - 11:00 PM</span>
+                    <span class="time">12:30 - 1:00 AM</span>
                     <span class="activity learning">📚 Book Reading</span>
                     <span class="duration">30 min</span>
                 </div>
                 <div class="time-slot">
-                    <span class="time">11:00 PM</span>
+                    <span class="time">1:00 AM</span>
                     <span class="activity">Sleep</span>
-                    <span class="duration">7 hours</span>
+                    <span class="duration">6 hours</span>
                 </div>
             </div>
         </div>
@@ -566,14 +555,14 @@
                 </div>
 
                 <div class="rationale-card">
-                    <h4>📜 Bash Second (11 AM)</h4>
+                    <h4>📜 Bash Second (9 AM)</h4>
                     <p><strong>Why:</strong> Automates Linux tasks</p>
                     <p><strong>Benefits:</strong> Scripting, automation, system tasks</p>
                     <p><strong>Sets up:</strong> Python and DevOps automation</p>
                 </div>
 
                 <div class="rationale-card">
-                    <h4>🐍 Python Third (2 PM)</h4>
+                    <h4>🐍 Python Third (12 PM)</h4>
                     <p><strong>Why:</strong> Advanced automation and tools</p>
                     <p><strong>Benefits:</strong> APIs, complex scripts, DevOps tools</p>
                     <p><strong>Sets up:</strong> Container and orchestration scripting</p>
@@ -587,14 +576,14 @@
                 </div>
 
                 <div class="rationale-card">
-                    <h4>🐳 Docker Fifth (9:10 PM)</h4>
+                    <h4>🐳 Docker Fifth (9:50 PM)</h4>
                     <p><strong>Why:</strong> Modern app deployment</p>
                     <p><strong>Benefits:</strong> Containerization, images, volumes</p>
                     <p><strong>Sets up:</strong> Kubernetes container orchestration</p>
                 </div>
 
                 <div class="rationale-card">
-                    <h4>☸️ Kubernetes Last (9:50 PM)</h4>
+                    <h4>☸️ Kubernetes Last (11:10 PM)</h4>
                     <p><strong>Why:</strong> Orchestrates everything learned</p>
                     <p><strong>Benefits:</strong> Scaling, management, production</p>
                     <p><strong>Uses:</strong> All previous skills combined</p>
